--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -1,8 +1,19 @@
 server:
-  port: 8001
+  port: 9001
 
 spring:
   application:
     name: auth
   profiles:
     active: dev
+  thymeleaf:
+    cache: false
+    encoding: utf-8
+    mode: HTML
+
+logging:
+  level:
+    root: INFO
+    org.springframework.web: INFO
+    org.springframework.security: INFO
+    org.springframework.security.oauth2: INFO
