--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>auth</module>
+        <module>auth-client</module>
     </modules>
 
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+        <version>2.2.13.RELEASE</version>
     </parent>
 
     <groupId>com.ylkj.cloud</groupId>
@@ -31,7 +32,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>2020.0.1</version>
+                <version>Hoxton.SR10</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
