--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <modules>
-        <module>auth</module>
-        <module>auth-client</module>
+        <module>authorization-server</module>
     </modules>
 
 
