--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.7.13</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
